# wechat-article-insight

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: docker.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: cookie.rs  db.rs  error.rs  main.rs  proxy.rs
backend/src/api/: embedding.rs  insight.rs  llm.rs  mod.rs  pdf.rs  public.rs  web.rs
backend/src/llm/: deepseek.rs  gemini.rs  mod.rs  ollama.rs  openai_compatible.rs
docs/: DOCKER_DEPLOY.md  LLM_CONFIG.md  OLLAMA_SETUP.md  POSTGRESQL_SETUP.md
frontend/: .gitignore  Dockerfile  FRONTEND_TUTORIAL.md  app.vue  build_output.txt  nuxt.config.ts  package-lock.json  package.json
frontend/apis/: index.ts
frontend/components/: ColorModeButton.vue
frontend/components/grid/: AccountActions.vue  Actions.vue
frontend/components/modal/: Login.vue
frontend/components/preview/: Article.vue
frontend/composables/: useLLMConfig.ts  usePageActive.ts  usePreferences.ts  useRustBackend.ts  useSessionValidator.ts
frontend/config/: index.ts
frontend/data/: doppelganger-questionnaire.ts
frontend/pages/: dashboard.vue  index.vue
frontend/pages/dashboard/: ai.vue  insights.vue
frontend/store/v2/: article.ts  assets.ts  comment.ts  html.ts  index.ts  info.ts
frontend/types/: gideon.ts
frontend/utils/: comment.ts  rustBackendApi.ts  vectorSearch.ts
frontend/utils/download/: Downloader.ts  Exporter.ts
frontend/utils/gideon/: logger.ts  scorer.ts  (+2 more)
tools/deploy-workers/: .gitignore  README.md  deploy.js  worker.js
