[package]
name = "network_insight_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "brotli", "rustls-tls"] }

# Database - PostgreSQL with pgvector
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "1"

# Environment
dotenvy = "0.15"
urlencoding = "2"
regex = "1"
lazy_static = "1"
url = "2"
base64 = "0.22.1"
md5 = "0.8.0"
html2md = "0.2"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
image = "0.24"
html-escape = "0.2"
